--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@inertiajs/vue3": "^2.2.8",
-    "@types/node": "^24.8.1",
+    "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-vue": "^6.0.1",
+    "tailwindcss": "^4.1.14",
     "vite": "^7.1.10",
     "vue": "^3.5.22"
+  },
+  "devDependencies": {
+    "@types/node": "^24.8.1"
   }
 }
