--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "@inertiajs/vue3": "^2.2.8",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-vue": "^6.0.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.552.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.1.10",
     "vue": "^3.5.22"
   },
