--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@inertiajs/vue3": "^2.2.8",
+    "@primeuix/themes": "^1.2.5",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-vue": "^6.0.1",
+    "primevue": "^4.4.1",
     "tailwindcss": "^4.1.14",
     "vite": "^7.1.10",
     "vue": "^3.5.22"
